# two-oh-four-eight

./: Cargo.toml  LICENSE  Makefile  README.md  flake.nix  shell.nix
src/: colours.rs  main.rs  ui.rs
src/ui/: styles.rs
