[package]
name = "two-oh-four-eight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", features = ["wayland"] }
bevy_easings = "0.13.0"
itertools = "0.12.1"
rand = "0.8.5"

[profile.release]
opt-level = 'z'
lto = "thin"
